--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,14 @@
     "target": "ES2020",
     "module": "ES2020",
     "esModuleInterop": true,
+    "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
   },
   "include": [
     "src/index.ts"
