--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "build:example": "vite build example",
     "dev:example": "vite dev example",
-    "deploy:example": "gh-pages -d dist"
+    "deploy:example": "gh-pages -d dist/example"
   },
   "repository": {
     "url": "https://github.com/cjcarrick/vue-reactive-query",
@@ -33,14 +33,15 @@
     "proseWrap": "always"
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "prettier": "^2.8.4",
-    "vite": "^4.1.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "typescript": "^4.9.5",
-    "vite-plugin-singlefile": "^0.13.3"
+    "vite-plugin-singlefile": "^0.13.3",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "gh-pages": "^5.0.0",
+    "prettier": "^2.8.4",
+    "vite": "^4.1.4"
   }
 }
